Moved flow chart basics into FlowNode component created sample json server rest framework, create postgres docker setup, rendering from JSON server

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,3 @@
-  <ejs-diagram id="diagram" width="100%" height="580px" 
-[nodes] = nodes  
-[connectors] = connectors 
-[getNodeDefaults] = nodeDefaults 
-[getConnectorDefaults] = connDefaults>
-</ejs-diagram>
+<div>
+    <app-flow-node></app-flow-node>
+</div>
