working database update from javascript event

--- a/src/app/flow-node/flow-node.component.html
+++ b/src/app/flow-node/flow-node.component.html
@@ -3,5 +3,6 @@
 [connectors] = connectors 
 [getNodeDefaults] = nodeDefaults 
 [getConnectorDefaults] = connDefaults
+(click)="onClick($event)"
 >
 </ejs-diagram>
