Added tool pallette

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
 <div>
-    <app-flow-node></app-flow-node>
+    <div style="width: 15%; float: left">
+       <app-pallette></app-pallette>
+    </div>
+    <div style="width: 85%; float: right">
+       <app-flow-node></app-flow-node>
+    </div>
 </div>
